fix: tag-list too high

--- a/src/_assets/design/components/project-card.styl
+++ b/src/_assets/design/components/project-card.styl
@@ -26,6 +26,7 @@
     margin-bottom 0
 
   > .description
+    flex 1
     margin 0 0 $gap-normal
     text-align justify
 
